Introduce a `~"workflow::complete` label to the product development workflow

--- a/development/analytics/product-intelligence/index.html.md.erb
+++ b/development/analytics/product-intelligence/index.html.md.erb
@@ -94,7 +94,7 @@ Our team use the following workflow stages defined in the [Product Development F
 | `~"workflow::in dev"` | Applied by the Engineer after work (including documentation) has begun on the issue. An MR is typically linked to the issue at this point. |
 | `~"workflow::in review"` | Applied by the Engineer indicating that all MRs required to close an issue are in review. |
 | `~"workflow::verification"` | Applied by the Engineer after the MRs in the issue have been merged, this label is applied signaling the issue needs to be verified in staging or production. |
-| `~"workflow::production"` | Applied by the Engineer after all MRs have merged and the issue has been verified. At this step, the issue should be closed as complete. |
+| `~"workflow::complete"` | Applied by the Engineer after all MRs have merged and the issue has been verified. At this step, the issue should also be closed. |
 | `~"workflow::blocked"` | Applied by any team member if at any time during development the issue is blocked. For example: technical issue, open question to PM or PD, cross-group dependency. |
 
 
