--- a/development/dev/manage/workspace/index.html.md.erb
+++ b/development/dev/manage/workspace/index.html.md.erb
@@ -126,6 +126,7 @@ Between when the planning issue is created and when it gets finalized, [everyone
 1. `workflow::in dev` - we are looking at the issue, and are either actively investigating, have begun development, or have a draft merge request open
 1. `workflow::in review` - a merge request has been submitted and reviews have been requested
 1. `workflow::verification` - the work has merged, and needs to be verified by the assignee
+1. `workflow::complete` - the work has been verified and is complete, issues should be closed at this stage
 
 Issues that were labeles with ~milestone::p1 are the priorities for this milestone. They should be worked immediately during the milestone to ensure they are finished and deployed on time. 
 
