--- a/development/enablement/systems/gitaly/index.html.md.erb
+++ b/development/enablement/systems/gitaly/index.html.md.erb
@@ -121,7 +121,7 @@ We use the following workflow labels on the issues:
 1. `workflow::in dev` - Actively being worked by the Engineering team
 1. `workflow::in review` - Work that is in review
 1. `workflow::verification` - code is in production and pending verification by the DRI engineer
-1. `workflow::production` - changes are verified, issue can be closed
+1. `workflow::complete` - changes are verified, issue can be closed
 
 Issues scheduled for the milestone (with `workflow::ready for development` and a specific release milestone assigned)
 can be further prioritized by moving them up or down on the dashboard. 
