--- a/development/ops/release/index.html.md.erb
+++ b/development/ops/release/index.html.md.erb
@@ -130,6 +130,8 @@ Below is a high level description of each stage, its meaning, and any requiremen
   * This stage indicates that the issue is undergoing code review by the development team and/or undergoing design review by the UX team.
 * `workflow::verification`
   * This stage indicates that everything has been merged and the issue is waiting for verification after a deploy.
+* `workflow::complete`
+  * The work has been verified and the issue is closed.
 
 ### Error budget
 The [Release Error Budget dashboard](https://dashboards.gitlab.net/d/stage-groups-release/stage-groups-group-dashboard-release-release?orgId=1) is used to identify and prioritize issues that are impacting our customers and infrastructure performance. 
