--- a/development/ops/release/planning/index.html.md.erb
+++ b/development/ops/release/planning/index.html.md.erb
@@ -136,7 +136,7 @@ When picking up an issue, please:
 
 As their work progresses, they advance the issue through the "in dev" and "in review" columns. Engineers need to keep the issues aligned with the status of the corresponding merge requests.
 
-Once the MR has been merged, the engineer will move the issue into `workflow::verification` until they have verified that the MR has been deployed to production. If the issue has been successfully deployed to production and the associated Feature Flag has been rolled out, then the issue can be closed.
+Once the MR has been merged, the engineer will move the issue into `workflow::verification` until they have verified that the MR has been deployed to production. If the issue has been successfully deployed to production and the associated Feature Flag has been rolled out, then the issue can be closed and `workflow::complete` should be applied.
 
 ### Epic Ownership
 
