--- a/development/sec/govern/compliance/_development_flow.erb
+++ b/development/sec/govern/compliance/_development_flow.erb
@@ -8,6 +8,7 @@ We generally follow the [Product Development Flow](/handbook/product-development
 1. `workflow::in dev`
 1. `workflow::in review`
 1. `workflow::verification` - code is in production and pending verification by the [DRI](/handbook/people-group/directly-responsible-individuals/) engineer
+1. `workflow::complete` - the work has been verified and the work is complete, the issue should be closed at this stage
 
 Generally speaking, issues are in one of two states:
 * Discovery/refinement (1-4): we're still answering questions that prevent us from starting development,
