--- a/development/sec/secure/static-analysis/index.html.md.erb
+++ b/development/sec/secure/static-analysis/index.html.md.erb
@@ -179,6 +179,7 @@ engineers will scrutinize an issue's readiness, estimate it size, and implement 
 | `~workflow::in dev` | Last MR is up and out of Draft or WIP status. |
 | `~workflow::in review` | Last MR is merged and changes are available in a production environment. |
 | `~workflow::verification` | Changes functionally tested in a production environment. |
+| `~workflow::complete` | Code is verified, the work is complete, and the issue is closed. |
 
 #### Weights
 
