--- a/development/dev/manage/integrations/index.html.md.erb
+++ b/development/dev/manage/integrations/index.html.md.erb
@@ -108,16 +108,19 @@ The process primarily follows the guideline:
 
 ``` mermaid
 graph LR
+
   classDef workflowLabel fill:#428BCA,color:#fff;
 
   A(workflow::in dev):::workflowLabel
   B(workflow::in review):::workflowLabel
   C(workflow::verification):::workflowLabel
+  F(workflow::complete):::workflowLabel
 
   A -- Push an MR --> B
   B -- Merged --> C
   C --> D{Works on production?}
-  D -- YES --> Close
+  D -- YES --> F
+  F --> CLOSE
   D -- NO --> E[New MR]
   E --> A
 ```
