--- a/development/dev/plan/optimize/partials/_organizing_work.erb
+++ b/development/dev/plan/optimize/partials/_organizing_work.erb
@@ -8,6 +8,7 @@ We generally follow the [Product Development Flow](/handbook/product-development
 1. `workflow::in dev`
 1. `workflow::in review`
 1. `workflow::verification` - code is in production and pending verification by the DRI engineer
+1. `workflow::complete` - the code has been verified and the work is complete, issue should be closed
 
 Generally speaking, issues are in one of two states:
 * Discovery/refinement: we're still answering questions that prevent us from starting development,
