--- a/development/growth/index.html.md.erb
+++ b/development/growth/index.html.md.erb
@@ -99,7 +99,7 @@ stable_counterparts(role_regexp: role_regexp, direct_manager_role: direct_manage
 
 ## How We Work
 
-Our team follows the [Product Development Flow](/handbook/product-development-flow/#workflow-summary) utilizing all labels from `~workflow::start` to `~workflow::verification`.
+Our team follows the [Product Development Flow](/handbook/product-development-flow/#workflow-summary) utilizing all labels from `~workflow::start` to `~workflow::complete`.
 
 We adhere to the **Completion Criteria** and **Who Transitions Out** outlined in the [Product Development Flow](/handbook/product-development-flow/#workflow-summary) to progress issues from one stage to the next.
 
