--- a/development/ops/package/index.html.md.erb
+++ b/development/ops/package/index.html.md.erb
@@ -263,7 +263,7 @@ We generally follow the [Product Development Flow](/handbook/product-development
 1. `workflow::in review`
 1. `workflow::verification` - code is merged and pending verification by the DRI engineer.
 1. `workflow::staging` - code is in staging and has been verified.
-1. `workflow::production` - code is in production and has been verified. Ideally, when an issue is closed, it has this label.
+1. `workflow::complete` - the work is in production and has been verified. The issue is closed.
 
 The Product Manager owns the process of populating the current milestone work following the [prioritization guidelines](/handbook/product/product-processes/#prioritization). Engineers are empowered, once the planned work has been exhausted, to prioritize issues that will deliver customer value preferring smaller issues over larger ones.
 
