Add link to Threat Insights planning issues

--- a/development/sec/govern/threat-insights/index.html.md.erb
+++ b/development/sec/govern/threat-insights/index.html.md.erb
@@ -64,6 +64,7 @@ We follow these guidelines when submitting MRs for review when the change is wit
 * [Threat Insights "Ready to Pull" Board](https://gitlab.com/groups/gitlab-org/-/boards/4643978?label_name[]=group%3A%3Athreat%20insights&label_name[]=ready%20to%20pull)
    * Secondary board for unassigned issues that are separate from a larger effort. Ideal candidates are small features, bugs, and follow-up items. 
 
+These boards show current status of issues. See also [priorities](https://gitlab.com/groups/gitlab-org/-/epics/8544) and [milestone planning](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Athreat%20insights&first_page_size=20).
 
 ### Indicating Status and Raising Risk
 
