--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -118,19 +118,19 @@ graph TD
 
 ## Team meetings
 
-Engineering Productivity has an alternating [weekly team meeting schedule](https://docs.google.com/document/d/1yzHuosvykzb_kaldjGP9I6wxpNpMXdNEvEFBkHyZpXs/edit#) to allow for all team members to collaborate in times that work for them. 
+Engineering Productivity has an alternating [weekly team meeting schedule](https://docs.google.com/document/d/1yzHuosvykzb_kaldjGP9I6wxpNpMXdNEvEFBkHyZpXs/edit#) to allow for all team members to collaborate in times that work for them.
 
 - Week 1 is Tuesdays 1200 UTC, 0400 PST
 - Week 2 is Tuesdays 2330 UTC, 1530 PST
 
 ### Showcase
 
-Showcases are done every two months and will be voted on by the team asynchronously in an issue. 
+Showcases are done every two months and will be voted on by the team asynchronously in an issue.
 
-1. Engineering Manager will create an issue to discuss showcase during the second week of even months. 
+1. Engineering Manager will create an issue to discuss showcase during the second week of even months.
 1. Team members will identify topics they'd like to learn more about or demo for the team.
-1. Team members vote with `:thumbsup:` reactions on the ideas they'd like to hear about. 
-1. Engineering Manager will identify a DRI to lead the showcase and schedule for the second week of the odd month. 
+1. Team members vote with `:thumbsup:` reactions on the ideas they'd like to hear about.
+1. Engineering Manager will identify a DRI to lead the showcase and schedule for the second week of the odd month.
 
 ## Work prioritization
 
@@ -216,6 +216,59 @@ Be sure to give a heads-up to `#development`,`#eng-managers`,`#product`, `#ux` S
 and the Engineering week in review when an automation is expected to triage more
 than 50 notifications or change policies that a large stakeholder group use (e.g. team-triage report).
 
+## Test Intelligence
+
+As the owner of [pipeline configuration](https://docs.gitlab.com/ee/development/pipelines/index.html) for the [GitLab project](https://gitlab.com/gitlab-org/gitlab), the Engineering Productivity team has adopted several test intelligence strategies aimed to improve pipeline efficiency with the following benefits:
+- Shortened feedback loop by prioritizing tests that are most likely to fail
+- Faster pipelines to scale better when Merge Train is enabled
+
+These strategies include:
+- "Minimal test jobs" via test mapping
+- Fail-fast job
+- Re-run previously failed tests early
+- Selective jobs via pipeline rules
+- Selective jobs via labels
+
+### "Minimal test jobs" via test mapping
+
+Tests that provide coverage to the code changes in each merge request are most likely to fail. As a result, merge request pipelines for the [GitLab project](https://gitlab.com/gitlab-org/gitlab) run only the minimal set of tests by default. These include:
+- [RSpec minimal jobs](https://docs.gitlab.com/ee/development/pipelines/#rspec-minimal-jobs) which runs relevant RSpec tests that are mapped to the code changes
+- [Jest minimal jobs](https://docs.gitlab.com/ee/development/pipelines/#jest-minimal-jobs) which runs relevant Jest tests that are mapped to the code changes
+
+Test mapping is done via the [test_file_finder](https://gitlab.com/gitlab-org/ci-cd/test_file_finder) gem. It is worth noting that the gem is supplemented with a [static mapping file](https://gitlab.com/gitlab-org/gitlab/-/blob/master/tests.yml) to account for known gaps, as the automated mapping is not always perfect.
+
+The "Fail-fast" job we are experimenting with is a variation of this strategy. It is to run all of the RSpec tests that are most likely to fail in a single job created in an early stage of the pipeline. See the Fail-fast job section for details.
+
+### Fail-fast job
+
+There is a [fail-fast job](https://docs.gitlab.com/ee/development/pipelinesx/#fail-fast-job-in-merge-request-pipelines) in each merge request pipeline aimed to run all the RSpec tests that provide coverage for the code changes, hence are most likely to fail. It uses the same [test_file_finder](https://gitlab.com/gitlab-org/ci-cd/test_file_finder) gem for test mapping. The job provides faster feedback by running early and stops the rest of the pipeline right away if any of the fail-fast job tests fail.
+Take a look at this [youtube video](https://www.youtube.com/watch?v=FCCbxZky5Nk) for details on how [GitLab](https://gitlab.com/gitlab-org/gitlab) implements the fail-fast job with test_file_finder.
+Note that the current design only works with low-impacting merge requests which are only mapped to a small set of tests. If there is a large number of tests that are likely to fail for a merge request, putting them in a single job is not feasible and could result in a long-running bottleneck which defeats its purpose.
+
+Premium GitLab customers, who wish to incorporate the `Fail-Fast job` into their Ruby projects, can set it up with our [Fail Fast Testing](https://docs.gitlab.com/ee/ci/testing/fail_fast_testing.html) template.
+
+### Re-run previously failed tests early
+
+Tests that previously failed in a merge request are likely to fail again, so they provide the most urgent feedback in the next run. To grant these tests the highest priority, the [GitLab](https://gitlab.com/gitlab-org/gitlab) pipeline [prioritizes previously failed tests by re-running them early](https://docs.gitlab.com/ee/development/pipelines/#re-run-previously-failed-tests-in-merge-request-pipelines) in a dedicated job, so it will be one of the first jobs to fail if attention is needed.
+
+### Selective jobs via pipeline rules
+
+The GitLab pipeline consists of hundreds of jobs, but not all are necessary for each merge request. For example, a merge request with only changes to documenation files do not need to run any backend tests, so we can exclude all backend test jobs from the pipeline. See [specify-when-jobs-run-with-rules](https://docs.gitlab.com/ee/ci/jobs/job_control.html#specify-when-jobs-run-with-rules) for how to include/exclude CI jobs based on file changes. Most of the pipeline rules for the [GitLab project](https://gitlab.com/gitlab-org/gitlab) can be found in <https://gitlab.com/gitlab-org/gitlab/-/blob/master/.gitlab/ci/rules.gitlab-ci.yml>.
+
+### Selective jobs via labels
+
+Developers can add labels to run jobs in addition to the ones selected by the pipeline rules. Those labels start with `pipeline:` and multiple can be applied. A few examples that people commonly use:
+
+- `~"pipeline:run-all-rspec"`
+- `~"pipeline:run-all-jest"`
+- `~"pipeline:run-as-if-foss"`
+- `~"pipeline:run-as-if-jh"`
+- `~"pipeline:run-on-pg11"`
+- `~"pipeline:run-praefect-with-db"`
+- `~"pipeline:run-single-db"`
+
+See [docs](https://docs.gitlab.com/ee/development/pipelines/) for when to use these pipeline labels.
+
 ## Experiments
 
 This is a list of Engineering Productivity experiments where we identify an opportunity, form a hypothesis and experiment to test the hypothesis.
@@ -244,3 +297,4 @@ This is a list of Engineering Productivity experiments where we identify an oppo
 [GitLab Styles]: https://gitlab.com/gitlab-org/ruby/gems/gitlab-styles
 [GitLab feature flag alert]: https://gitlab.com/gitlab-org/gitlab-feature-flag-alert
 [Gitlab RSpec Profiling Statistics]: https://gitlab.com/gitlab-org/rspec_profiling_stats
+
