Add eligibility note for new IMOC participants

--- a/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
+++ b/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
@@ -21,6 +21,7 @@ The Incident Manager role will be staffed by all team members within this scope:
 - All Staff Engineer, SRE, and Engineering Manager Job Families
 - All specialties within the above Job Families (for example: Staff Backend Engineer, Staff Frontend Engineer, Frontend Engineering Manager, etc..)
 - Not already engaged in another oncall assignment.
+- Employed at the company for at least 3 months (same criteria for [eligibility to join the Dev Escalation rotation](/handbook/engineering/development/processes/Infra-Dev-Escalation/process.html#eligibility))
 
 As an Incident Manager, Team Members learn how we run GitLab.com and other GitLab SaaS environments. They help ensure the availability goals for GitLab.com by working with reliability engineers on call and development team members. The experience and awareness gained in this role leads to better understanding of building GitLab at scale and ultimately, a more reliable and scalable GitLab SaaS service and product.
 
