--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -321,10 +321,13 @@ The cut-line also serves as a healthy discussion between engineers and their man
 {:.no_toc}
 
 - [Dev QE Team](https://gitlab.com/groups/gitlab-org/-/boards/425899)
-- [Ops QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978348)
+- [Ops & Analytics QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978348)
 - [Enablement QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978354)
-- [Growth QE Team](https://gitlab.com/groups/gitlab-org/-/boards/1512645)
-- [Engineering Productivity QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978615)
+- [Fulfillment QE Team](https://gitlab.com/groups/gitlab-org/-/boards/1512645)
+- [Sec & Data Science QE Team](https://gitlab.com/groups/gitlab-org/-/boards/1524991)
+- [Engineering Productivity Team](https://gitlab.com/groups/gitlab-org/-/boards/978615)
+- [Contributor Success Team](https://gitlab.com/groups/gitlab-org/-/boards/4879276)
+- [Quality Management Team](https://gitlab.com/groups/gitlab-org/quality/-/boards/4518177)
 
 The boards serve as a single pane of glass view for each team and help in communicating the overall status broadly, transparently and asynchronously.
 
