Correctly fixed markdown link

--- a/quality/contributor-success/index.html.md.erb
+++ b/quality/contributor-success/index.html.md.erb
@@ -305,7 +305,7 @@ A nomination process is also available to [nominate a contributor](/handbook/mar
 
 The purpose of this stand-up is to collaborate cross-functionally between various teams and GitLab team members on
 initiatives for how to reach our goal of 1000 contributors per month. This is a subset of the User Engagement top
-initiative: (https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8)[https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8]
+initiative: [https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8](https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8)
 
 - Agenda - <https://docs.google.com/document/d/11S48qIoFzKxZAdMznlUm5-Pob4EEBb8DNv2YIBLw9uw/edit>
 - Legacy Agenda - <https://docs.google.com/document/d/1AOgqaslnq-WI1ICSZ1NzSnALf1Va4D5qAD191icAoSI/edit#>
