Remove references to Workspace from /dev/manage

--- a/development/dev/manage/organization/index.html.md.erb
+++ b/development/dev/manage/organization/index.html.md.erb
@@ -135,9 +135,9 @@ With the combination of our capacity planning (EM) and estimation (IC) processes
 
 ### Additional considerations
 
-<%= partial("handbook/engineering/development/dev/manage/workspace_processes.erb") %>
-<%= partial("handbook/engineering/development/dev/manage/workspace/okr_training_process.erb") %>
-<%= partial("handbook/engineering/development/dev/manage/workspace/career_development_process.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/organization_processes.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/organization/okr_training_process.erb") %>
+<%= partial("handbook/engineering/development/dev/manage/organization/career_development_process.erb") %>
 
 ## Meetings
 
@@ -155,7 +155,7 @@ All meetings should have an agenda prepared at least 12 hours in advance. If thi
 
 The following people are permanent members of the group:
 
-<%= stable_counterparts(role_regexp: /Manage.+Workspace/) %>
+<%= stable_counterparts(role_regexp: /Manage.+Organization/) %>
 
 ## Dashboards
 
