--- a/development/dev/manage/_release_posts.erb
+++ b/development/dev/manage/_release_posts.erb
@@ -4,4 +4,4 @@ When working on an issue, either in planning, or during design and development, 
 to have the release post created and notify all the relevant people.
 
 If you do not want an issue to have a release post, make sure that the issue does not have a
-release notes section or use a `release post item::` label.
+release notes section or do not use a `release post item::` label.
