--- a/development/dev/manage/index.html.md.erb
+++ b/development/dev/manage/index.html.md.erb
@@ -254,16 +254,16 @@ All meetings should have an agenda prepared at least 12 hours in advance. If thi
   * [Foundations](/handbook/engineering/development/dev/manage/foundations/)
   * [Import](/handbook/engineering/development/dev/manage/import/)
   * [Integrations](/handbook/engineering/development/dev/manage/integrations/)
-  * [Workspace](/handbook/engineering/development/dev/manage/workspace/)
+  * [Organization](/handbook/engineering/development/dev/manage/organization/)
 * Our Slack channels
   * Manage:Authentication and Authorization [#g_manage_auth](https://gitlab.slack.com/archives/CLM1D8QR0)
   * Manage:Foundations [#g_manage_foundations](https://gitlab.slack.com/messages/C010NAWPRV4)
   * Manage:Import [#g_manage_import](https://gitlab.slack.com/messages/CLX7WMSKW)
   * Manage:Integrations [#g_manage_integrations](https://gitlab.slack.com/messages/C01E55XNCEA)
-  * Manage:Workspace [#g_manage_workspace](https://gitlab.slack.com/archives/C02AZ7C32N5)
+  * Manage:Organization [#g_manage_organization](https://gitlab.slack.com/archives/C02AZ7C32N5)
 * Issue boards
   * Authentication and Authorization [build board](https://gitlab.com/groups/gitlab-org/-/boards/1305005) and [refinement board](https://gitlab.com/groups/gitlab-org/-/boards/1747837)
   * Foundations board placeholder
   * Import [refinement and build board](https://gitlab.com/groups/gitlab-org/-/boards/2013571)
   * Integrations board placeholder
-  * Workspace placeholder
+  * Organization [build board](https://gitlab.com/gitlab-org/gitlab/-/boards/1339417?label_name[]=Deliverable&label_name[]=group%3A%3Aorganization&milestone_title=Started)
