Added January 2023 Product GC issue

--- a/product/product-leadership/index.html.md.erb
+++ b/product/product-leadership/index.html.md.erb
@@ -59,7 +59,7 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2022-10-18 | Taylor McCaslin | [Issue 4912](https://gitlab.com/gitlab-com/Product/-/issues/4912) |
 | 2022-11-10 | Joshua Lambert | [Issue 5026](https://gitlab.com/gitlab-com/Product/-/issues/5026) |
 | 2022-12-14 | Omar Fernandez | [Issue 5164](https://gitlab.com/gitlab-com/Product/-/issues/5164) |
-| 2023-01-17 | Orit Golowinski (Dev) | TBD | 
+| 2023-01-17 | Sarah Waldner (Dev) | [Issue 5268](https://gitlab.com/gitlab-com/Product/-/issues/5268) | 
 | 2023-02-28 | Jackie Porter (Ops) | TBD |
 | 2023-03-22 | Hillary Benson (Sec) | TBD |
 | 2023-04-13 | Joshua Lambert (Enablement) | TBD |
