Update ::closed to ::complete

--- a/development/data-science/ai-assisted/index.html.md.erb
+++ b/development/data-science/ai-assisted/index.html.md.erb
@@ -84,7 +84,7 @@ Please be sure to update the workflow labels of your issue to one of the followi
 - ~"workflow::In dev"
 - ~"workflow::In review"
 - ~"workflow::verification"
-- ~"workflow::closed"
+- ~"workflow::complete"
 - ~"workflow::blocked"
 -->
 ### Async issue update
