--- a/development/dev/manage/organization/_okr_training_process.erb
+++ b/development/dev/manage/organization/_okr_training_process.erb
@@ -1,7 +1,7 @@
 #### OKR trainings
 
 Different pieces of training are often part of OKRs. To facilitate tracking those training and in the spirit of dogfooding our product,
-following participation in the training is tracked through the issue in [Manage: Workspace project](https://gitlab.com/gitlab-org/manage/manage-workspace).
+following participation in the training is tracked through the issue in [Manage:Organization project](https://gitlab.com/gitlab-org/manage/manage-organization).
 
 At the beginning of the quarter, when OKR is due, the Engineering Manager is responsible for starting the issue.
 The issue should consist of a link to the training, an explanation of why the OKR was set and checkboxes for all the team members.
