--- a/development/fulfillment/utilization/index.html.md.erb
+++ b/development/fulfillment/utilization/index.html.md.erb
@@ -185,7 +185,9 @@ Ready for development means replying yes to the following questions:
 - Does the issue have proper labeling matching the job to be done? (e.g. bug, feature, performance)
 - Is this issue sufficiently small enough? If not, break it into smaller issues
 - Is it assigned to the correct domain (e.g. frontend, backend)? If not, break it into two issues for the respective domains
-– Is the issue clear and easy to understand? If not, try asking further clarification questions and update the description once they are received
+- Is the issue clear and easy to understand? If not, try asking further clarification questions and update the description once they are received
+- Has the issue been reviewed for overlap with other issues and addressed as necessary?
+- Are the weights of the issues updated based on team input and knowledge?
 
 If more than 2 MRs are needed, consider adding a table like the following to the description (e.g. under `Implementation plan`).
 
@@ -201,6 +203,7 @@ It will help track the status.
 - [ ] Number of MRs listed
 - [ ] Needs testing considerations
 - [ ] Needs documentation updates
+- [ ] Reviewed other milestone issues for possible overlap with current one and mark them as "linked", "blocks", or "is blocked by"
 
 **Reasoning:**
 
